# Burn-in-subtitle-checker

./: .gitignore  README.md  demo_submission.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: STAGE1.md  STAGE2.md  STAGE3.md  STAGE4.md
subtitle_checker/: __init__.py  artifacts.py  cli.py
subtitle_checker/audio/: __init__.py  regions.py  vad.py
subtitle_checker/evaluation/: __init__.py  alignment_eval.py  burn.py  coverage.py  defects.py  detection.py  inject.py  score.py  structural_eval.py
subtitle_checker/ingest/: __init__.py  audio_track.py
subtitle_checker/match/: __init__.py  align.py  asr.py  scoring.py  structural.py  verdicts.py
subtitle_checker/report/: __init__.py  evidence.py  html.py  webui.py
subtitle_checker/subtitles/: __init__.py  events.py  legibility.py  masks.py  ocr.py  reconstruct.py  sampler.py
tests/: test_align.py  test_alignment_eval.py  test_artifacts.py  test_asr.py  test_audio_track.py  test_cli.py  test_coverage.py  test_detection_eval.py  test_evaluation.py  test_events.py  test_legibility.py  test_masks.py  test_ocr.py  test_regions.py  test_report.py  test_report_evidence.py  test_sampler.py  test_scoring.py  test_stage1_integration.py  test_structural.py  test_structural_eval.py  test_verdicts.py  test_webui.py
