[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "subtitle-checker"
version = "0.1.0"
description = "Flags mismatches between audio dialogue and burned-in subtitles in video files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
subtitle-checker = "subtitle_checker.cli:main"

[tool.setuptools.packages.find]
include = ["subtitle_checker*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
