[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "subtitle-checker"
version = "0.1.0"
description = "Flags mismatches between audio dialogue and burned-in subtitles in video files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.26,<3"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]
# OCR pulls in torch (~2 GB) — separate extra so CI and audio-only work skip it
ocr = ["easyocr==1.7.2"]
# VAD also rides on torch — its own extra so OCR-only work skips it
audio = ["silero-vad>=5.1"]
# Forced alignment rides on torchaudio + uroman (romanizes Indic text for the
# Latin MMS dictionary) — its own extra so OCR/VAD-only work skips the download
align = ["torchaudio>=2.1", "uroman>=1.2"]

[project.scripts]
subtitle-checker = "subtitle_checker.cli:main"

[tool.setuptools.packages.find]
include = ["subtitle_checker*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
